--- a/calculator.html
+++ b/calculator.html
@@ -12,6 +12,14 @@ num.value = Math.pow(num.value, 3);
 
 }
 
+function sine() {
+
+var num = document.getElementById("n1");
+
+num.value = Math.sin(num.value);
+
+}
+
 </script>
 
 </head>
@@ -22,7 +30,8 @@ Number:
 
 <input type="text" id="n1"><p>
 
-<button onclick="cube()"> x^3 </button>
+<button onclick="cube()"> x<sup>3</sup> </button>
+<button onclick="sine()"> sin(x) </button>
 
 </body>
 
